# hackathon-btc-arbitrage

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  probe.txt  render.yaml  results.txt  sizes.txt
app/: README.md  server.py
config/: inventory.example.json
docs/: agent2-continuous-scout-report.md  agent2-kill-list.md  agent2-next-actions.md  agent2-opportunity-candidates.md  codex-adversarial-review.md  continuous-profit-scout-agent2.md  engine-architecture.md  exchange-fees.md  exchange-map.md  implementation-queue.md  market-discovery-spec.md  overnight-goal-prompt.md  overnight-profit-checkpoints.md  overnight-profit-opportunities.md  overnight-rejected-ideas.md  profit-approach-playbook.md  profit-engine-spec.md  profit-engine-test-cases.md  safe-yield-strategy.md  target-20pct-plan.md
ops/: com.pedro.hackathonbtc.btc-hot-path.plist  com.pedro.hackathonbtc.paper-trade-monitor.plist  com.pedro.hackathonbtc.profit-monitor.plist  com.pedro.hackathonbtc.recheck-monitor.plist  com.pedro.hackathonbtc.signal-monitor.plist  com.pedro.hackathonbtc.status-monitor.plist  install-btc-hot-path-launchagent.sh  install-paper-trade-monitor-launchagent.sh  install-profit-monitor-launchagent.sh  install-recheck-monitor-launchagent.sh  install-signal-monitor-launchagent.sh  install-status-monitor-launchagent.sh
scripts/: btc_hot_path_monitor.py  funding_probe.py  market_probe.py  profit_monitor.py  profit_paper_trade_monitor.py  profit_recheck_monitor.py  profit_report.py  profit_signal_monitor.py  status_monitor.py
src/: book.rs  feeds.rs  fees.rs  lib.rs  main.rs  (+2 more)
(+5 files in other folders)
