[package]
name = "btc-arb-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4"
